Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139232

Crash when View3D is destroyed in a multiview case

XMLWordPrintable

    • All
    • eacd0dd38 (dev), fc126cafb (6.10), 61c84977f (6.9), cbd86e299 (tqtc/lts-6.8)

      When QML dynamically destroys View3D having importScene,
      it can make the app crash if the importScene have the same sceneManager with the destroyed view3D.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            inho Inho Lee
            inho Inho Lee
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes