Update the importScene's scenemanger when destroyed

importScenes can share a sceneManager with other importScenes or
sceneRoots. In that case, if the sceneManager was deleted,
the importScenes' sceneManagers were not updated correctly which
could result in the application crashing.

Fixes: QTBUG-139232
Pick-to: 6.8
Change-Id: I018cecbd61cf39cfd18b7cc94759b636caecd5ae
Reviewed-by: Christian Strømme <christian.stromme@qt.io>
(cherry picked from commit eacd0dd3847253b7bcc3e7645d60b5661348cb3d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit fc126cafba7f9b2ffe7c29a114fd01d78da6a9ea)